--- a/public/style.css
+++ b/public/style.css
@@ -578,6 +578,62 @@ video {
   right: 50%;
 }
 
+.right-7 {
+  right: 1.75rem;
+}
+
+.right-16 {
+  right: 4rem;
+}
+
+.right-24 {
+  right: 6rem;
+}
+
+.right-28 {
+  right: 7rem;
+}
+
+.right-32 {
+  right: 8rem;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.right-40 {
+  right: 10rem;
+}
+
+.right-48 {
+  right: 12rem;
+}
+
+.right-56 {
+  right: 14rem;
+}
+
+.z-0 {
+  z-index: 0;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
+.-z-20 {
+  z-index: -20;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
 .col-span-1 {
   grid-column: span 1 / span 1;
 }
@@ -594,12 +650,16 @@ video {
   grid-column: span 4 / span 4;
 }
 
+.col-span-5 {
+  grid-column: span 5 / span 5;
+}
+
 .col-span-6 {
   grid-column: span 6 / span 6;
 }
 
-.col-span-5 {
-  grid-column: span 5 / span 5;
+.col-start-6 {
+  grid-column-start: 6;
 }
 
 .row-start-1 {
@@ -660,6 +720,10 @@ video {
   width: 100%;
 }
 
+.grow {
+  flex-grow: 1;
+}
+
 .translate-x-1\/2 {
   --tw-translate-x: 50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -706,10 +770,6 @@ video {
 
 .grid-cols-6 {
   grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
-.grid-cols-7 {
-  grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -845,6 +905,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-medium {
+  border-radius: 10px;
+}
+
 .rounded-b-lg {
   border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
@@ -873,15 +937,6 @@ video {
 
 .border-t {
   border-top-width: 1px;
-}
-
-.border-CustomOrange {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 149 0 / var(--tw-border-opacity, 1));
-}
-
-.border-CustomOrange\/50 {
-  border-color: rgb(255 149 0 / 0.5);
 }
 
 .border-CustomOrange\/20 {
@@ -924,18 +979,9 @@ video {
   background-color: rgb(247 247 248 / var(--tw-bg-opacity, 1));
 }
 
-.bg-red-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(153 27 27 / var(--tw-bg-opacity, 1));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.fill-black {
-  fill: #000;
 }
 
 .p-1 {
@@ -962,8 +1008,8 @@ video {
   padding: 2rem;
 }
 
-.p-10 {
-  padding: 2.5rem;
+.p-16 {
+  padding: 4rem;
 }
 
 .px-1 {
@@ -1156,13 +1202,13 @@ video {
   color: rgb(76 76 77 / 0.5);
 }
 
+.text-lightCustomGrey\/90 {
+  color: rgb(76 76 77 / 0.9);
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-lightCustomGrey\/90 {
-  color: rgb(76 76 77 / 0.9);
 }
 
 .underline {
@@ -1373,6 +1419,11 @@ video {
     padding: 0.75rem;
   }
 
+  .sm\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
   .sm\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
@@ -1407,6 +1458,10 @@ video {
     grid-column-start: 2;
   }
 
+  .md\:col-start-6 {
+    grid-column-start: 6;
+  }
+
   .md\:col-end-6 {
     grid-column-end: 6;
   }
@@ -1425,6 +1480,10 @@ video {
 
   .md\:grid-cols-7 {
     grid-template-columns: repeat(7, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -1467,6 +1526,11 @@ video {
     padding: 1.25rem;
   }
 
+  .md\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
   .md\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
@@ -1480,6 +1544,11 @@ video {
   .md\:px-5 {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
+  }
+
+  .md\:py-10 {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
   }
 
   .md\:py-3 {
@@ -1699,6 +1768,11 @@ video {
     max-width: 1920px;
   }
 
+  .\33xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .\33xl\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -1727,10 +1801,5 @@ video {
   .\33xl\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .\33xl\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 }
