--- a/public/style.css
+++ b/public/style.css
@@ -570,68 +570,20 @@ video {
   top: -1.25rem;
 }
 
-.bottom-1\/2 {
-  bottom: 50%;
-}
-
-.right-1\/2 {
-  right: 50%;
-}
-
-.top-0 {
-  top: 0px;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
 
-.right-0 {
-  right: 0px;
-}
-
-.right-10 {
-  right: 2.5rem;
-}
-
-.right-24 {
-  right: 6rem;
-}
-
-.right-56 {
-  right: 14rem;
-}
-
-.right-52 {
-  right: 13rem;
-}
-
-.right-48 {
-  right: 12rem;
-}
-
-.right-44 {
-  right: 11rem;
-}
-
-.left-56 {
-  left: 14rem;
-}
-
-.left-96 {
-  left: 24rem;
-}
-
-.left-3\/4 {
-  left: 75%;
-}
-
-.left-2\/3 {
-  left: 66.666667%;
+.bottom-1\/2 {
+  bottom: 50%;
 }
 
 .left-2\/4 {
   left: 50%;
+}
+
+.right-1\/2 {
+  right: 50%;
 }
 
 .-z-10 {
@@ -724,13 +676,10 @@ video {
   width: 100%;
 }
 
-<<<<<<< HEAD
-=======
 .grow {
   flex-grow: 1;
 }
 
->>>>>>> 9468e82b98a264eb5016aabcf8f99ffa2aea885a
 .translate-x-1\/2 {
   --tw-translate-x: 50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -871,6 +820,18 @@ video {
   gap: 2rem;
 }
 
+.gap-56 {
+  gap: 14rem;
+}
+
+.gap-52 {
+  gap: 13rem;
+}
+
+.gap-36 {
+  gap: 9rem;
+}
+
 .gap-x-5 {
   -moz-column-gap: 1.25rem;
        column-gap: 1.25rem;
@@ -946,13 +907,14 @@ video {
   border-top-width: 1px;
 }
 
-<<<<<<< HEAD
-=======
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
 .border-CustomOrange\/20 {
   border-color: rgb(255 149 0 / 0.2);
 }
 
->>>>>>> 9468e82b98a264eb5016aabcf8f99ffa2aea885a
 .bg-CustomOrange {
   --tw-bg-opacity: 1;
   background-color: rgb(255 149 0 / var(--tw-bg-opacity, 1));
@@ -994,61 +956,10 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-<<<<<<< HEAD
-=======
-.bg-Z-image {
-  background-image: url('../public/asset/about-page-images/Z-image.png');
-}
-
-.bg-cover {
-  background-size: cover;
-}
-
-.bg-contain {
-  background-size: contain;
-}
-
-.bg-\[length\:100\%_100\%\] {
-  background-size: 100% 100%;
-}
-
-.bg-\[length\:100\%\] {
-  background-size: 100%;
-}
-
-.bg-\[length\:0_100\%\] {
-  background-size: 0 100%;
-}
-
-.bg-\[length\:0\%_100\%\] {
-  background-size: 0% 100%;
-}
-
 .bg-fixed {
   background-attachment: fixed;
 }
 
-.bg-center {
-  background-position: center;
-}
-
-.bg-right {
-  background-position: right;
-}
-
-.bg-\[position\:60\%_center\] {
-  background-position: 60% center;
-}
-
-.bg-\[position\:80\%_center\] {
-  background-position: 80% center;
-}
-
-.bg-no-repeat {
-  background-repeat: no-repeat;
-}
-
->>>>>>> 9468e82b98a264eb5016aabcf8f99ffa2aea885a
 .p-1 {
   padding: 0.25rem;
 }
@@ -1285,12 +1196,6 @@ video {
   outline-offset: 2px;
 }
 
-.ring-0 {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1513,13 +1418,10 @@ video {
 }
 
 @media (min-width: 768px) {
-<<<<<<< HEAD
-=======
   .md\:top-0 {
     top: 0px;
   }
 
->>>>>>> 9468e82b98a264eb5016aabcf8f99ffa2aea885a
   .md\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -1530,10 +1432,6 @@ video {
 
   .md\:col-start-2 {
     grid-column-start: 2;
-  }
-
-  .md\:col-start-6 {
-    grid-column-start: 6;
   }
 
   .md\:col-end-6 {
@@ -1556,20 +1454,12 @@ video {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .md\:grid-cols-6 {
-    grid-template-columns: repeat(6, minmax(0, 1fr));
-  }
-
   .md\:grid-cols-7 {
     grid-template-columns: repeat(7, minmax(0, 1fr));
   }
 
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:justify-end {
-    justify-content: flex-end;
   }
 
   .md\:gap-0 {
@@ -1592,6 +1482,10 @@ video {
     gap: 1.5rem;
   }
 
+  .md\:gap-20 {
+    gap: 5rem;
+  }
+
   .md\:p-10 {
     padding: 2.5rem;
   }
@@ -1608,14 +1502,11 @@ video {
     padding: 1.25rem;
   }
 
-<<<<<<< HEAD
-=======
   .md\:px-10 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
   }
 
->>>>>>> 9468e82b98a264eb5016aabcf8f99ffa2aea885a
   .md\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
@@ -1727,13 +1618,10 @@ video {
     gap: 1.25rem;
   }
 
-<<<<<<< HEAD
-=======
   .lg\:p-16 {
     padding: 4rem;
   }
 
->>>>>>> 9468e82b98a264eb5016aabcf8f99ffa2aea885a
   .lg\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
